fix: Fonts in tofrac switcher is almost invisible in dark mode

--- a/src/style/calculator/calculator.less
+++ b/src/style/calculator/calculator.less
@@ -38,6 +38,9 @@
                 border-color: var(--ca-gray4);
                 background-color: var(--ca-gray9);
             }
+            span {
+                color: var(--ca-gray1);
+            }
         }
         .number-box-list {
             width: 40%;
